examples/negative/name_errors/L3/8_non_local_var_proc.ob
MODULE NonLocalVarProc;

PROCEDURE FOO;
  
  PROCEDURE BAR;
    VAR x: INTEGER;
    BEGIN
    END BAR;
  BEGIN
    x := 42;
  END FOO;

END NonLocalVarProc.